# shared-jquants-api

./: README.md  pyproject.toml
shared_jquants_api/: __init__.py  jquants_api.py
