[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shared-jquants-api"
version = "0.1.0"
description = "Shared J-Quants API client"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
  { name = "osamu" }
]

[tool.setuptools.packages.find]
where = ["."]
include = ["shared_jquants_api*"]
